# SonataLauncher

./: .gitignore  README.md  flake.nix  metacache.json
action_handler/: Cargo.toml
action_handler/src/: main.rs  root.rs
action_handler/src/config/: mod.rs
action_handler/src/instance/: launch.rs  mod.rs
action_handler/src/instance/download/: assets.rs  libs.rs
action_handler/src/java/: arch.rs  download.rs  extract.rs  install.rs  mod.rs
action_handler/src/types/ws/: mod.rs
action_handler/src/utils/: download.rs  mod.rs
action_handler/src/utils/instances_list/: mod.rs
action_handler/src/utils/metacache/: mod.rs
animrs/: Cargo.toml
animrs/src/: main.rs
app/: index.html  main.js  package-lock.json  package.json  pnpm-lock.yaml  postcss.config.mjs  preload.js  tsconfig.json  vite.config.js  vite.config.ts
app/electron/: main.ts
app/src/: App.css  App.jsx  main.jsx  main.tsx
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src/assets/scripts/: paint.ts
app/src/data/: api.ts  constants.ts  store.ts  types.ts
app/src/data/localization/: en.json  store.tsx
app/src/ui/: App.css  App.module.less  App.tsx  routes.tsx
app/src/ui/Header/: Header.css  Header.tsx
app/src/ui/Instaces/: Instances.module.less  instances.tsx
app/src/utils/: Router.js
app/src/widgets/Header/: Header.css  Header.jsx
app/src/widgets/Instaces/: Instances.css  Instances.js
app/src/widgets/NewsList/: NewsList.jsx
backend/: .env  Cargo.toml
backend/src/: main.rs
backend/src/instance/: download.rs  launch.rs  mod.rs
wstest/: Cargo.toml
wstest/src/: main.rs
(+30 files in other folders)
