[package]
name = "sonata_action_handler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tide = "0.16.0"
async-std = { version = "1.12.0", features = ["attributes"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
futures = "0.3.30"
surf = "2.3.2"
crossterm = "0.27"
async-tungstenite = "0.26.2"
tide-websockets = "0.4.0"
chrono = "0.4.38"
home = "0.5.9"
sys-info = "0.9.1"
lzma-rs = "0.3.0"
